# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.22.9
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Support -~* keywords: Introduce {isminusunstable}, {wasminusunstable}
	- Support alternative /etc/portage/make.profile location, see
	  http://bugs.gentoo.org/show_bug.cgi?id=358647
	- Support layman-2
	- Make eix-test-obsolete more intelligent concerning skipping of
	  checks, see http://bugs.gentoo.org/show_bug.cgi?id=358861
	- Introduce ROOT_UID for usage with prefix, see
	  http://bugs.gentoo.org/show_bug.cgi?id=364351
	  Thanks to Jacob Godserv at <jacobgodserv at gmail.com> for the patch.
	- Add several ATTRIBUTE_PURE
	- Treat provide as a list of strings, see
	  http://bugs.gentoo.org/show_bug.cgi?id=358729
	- Do not add -flto on gcc-4.6.0 as it seems broken there, see
	  http://bugs.gentoo.org/show_bug.cgi?id=364317
	- Make -flto tests more reliable
	- Add CFLAGS to LDFLAGS in case of -flto
	- Use AS_VAR_COPY instead of AS_VAR_SET if possible
	- Use -fno-common -fnothrow-opt -flto-partition=none and new -W...

*eix-0.22.8
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix non-casting of rend() -> reverse_const_iterator on some systems,
	  see http://bugs.gentoo.org/show_bug.cgi?id=354071
	- Do not rely on argreader.end() not to change, even if argreader is
	  not accessed in a writable way. Thanks to
	  Tom Lloyd <napalmllama at gmail.com> for letting me debug on his
	  machine, see http://bugs.gentoo.org/show_bug.cgi?id=355623
	- Set always default search field, even if string is unspecified
	- Introduce ACCEPT_KEYWORDS_AS_ARCH=full and make it default, see
	  http://bugs.gentoo.org/show_bug.cgi?id=353562
	- Also add ./configure --with-always-accept-keywords
	- Remove --with-rst and ship *.html in tarball, see
	  http://bugs.gentoo.org/show_bug.cgi?id=353705
	- Add --with-extra-doc and install by default nothing from doc

*eix-0.22.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add option -f to eix-installed-after