@@ -6,6 +6,8 @@
 	- Support alternative /etc/portage/make.profile location, see
 	  http://bugs.gentoo.org/show_bug.cgi?id=358647
 	- Support layman-2
+	- Fix handling of non-matching /etc/portage/package.accept_keywords:
+	  http://bugs.gentoo.org/show_bug.cgi?id=370799
 	- Make eix-test-obsolete more intelligent concerning skipping of
 	  checks, see http://bugs.gentoo.org/show_bug.cgi?id=358861
 	- Introduce ROOT_UID for usage with prefix, see
